tests/negative/array_var_oob_index_assign.far
fun main() -> i64 {
  a = [1, 2, 3]
  a[3] = 99
  return 0
}
